# ATM_Forecaster

./: .gitignore  README.md  pyproject.toml
atm_forecaster/: __init__.py  cli.py  config.py  features.py  history.py  model.py
forecaster/: cli.py  config.py  data_loader.py  model.py  normalize.py
models/: model_CS71245.pkl  model_CS91373.pkl  model_NW03450.pkl  model_NW10643.pkl  model_NW11009.pkl  model_NW14530.pkl  model_NW35983.pkl  model_TN73834.pkl  model_TN84861.pkl
tests/: test_cli.py  test_data_loader.py  test_normalize.py
