[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forecaster"
version = "0.1.0"
description = "Daily cash forecasting for an ATM route with holidays, events, and self-evaluation."
authors = [{ name = "Conrad Storz" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "typer",
    "loguru",
    "pydantic>=2.0.0",
    "joblib",
    "pytest",
]

[project.scripts]
forecaster = "forecaster.cli:app"
